--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "timmyreilly",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.0",
     "dotenv": "^4.0.0",
     "express": "^4.9.8",
     "redis": "^2.8.0",
